# nocturne

./: .gitignore  Cargo.toml  DUTIES.md  LICENSE  README.md  RULES.md  SOUL.md  agent.yaml  nocthub_integration.tsx  pyproject.toml
docs/: semantic_equivalence.md
examples/: config.yaml  example.py
nocthub-golden/: Cargo.toml
nocthub-golden/src/: main.rs
nocturne-core/: Cargo.toml
nocturne-core/src/: lib.rs  node.rs
nocturne-core/src/asi/: profiler.rs
nocturne-core/src/crypto/: bls.rs
nocturne-core/src/hardware/: cryo_anchor.rs  dc_interface.rs  kiutra.rs  mod.rs  vercore.rs
nocturne-core/src/serialization/: canonical.rs  encoding.rs  error.rs  mod.rs
nocturne-core/src/temporal/: mod.rs  phase_sync.rs  tzinor_pll.rs
nocturne-core/src/transformer/: mod.rs  xi_pi.rs
nocturne-core/src/types/: aletheia.rs  entropy.rs  mod.rs  proofs.rs
nocturne-sdk/: Cargo.toml
nocturne-sdk/src/: lib.rs
nocturne-sdk/tests/: arkhe_integration.rs  golden_vectors.rs
nocturne_sdk/: __init__.py  config.py
nocturne_sdk/forget_machine/: __init__.py  policy.py
nocturne_sdk/trauma_engine/: __init__.py  client.py  models.py
tests/golden_vectors/: aletheia_header.json  aletheia_proof_valid.json  aletheia_witness.json  entropy_proof_invalid_negative_energy.json  entropy_proof_invalid_q_gt_p.json  entropy_proof_invalid_zero_p.json  entropy_proof_valid.json
