[tool.poetry]
name = "nocturne-sdk"
version = "0.1.0"
description = "Enterprise SDK for NOCTURNE - Distributed State Engine with Intelligent Forgetting"
authors = ["NOCTURNE Development Team <nocturne@enterprise.dev>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/nocturne-io/sdk"
repository = "https://github.com/nocturne-io/sdk.git"
documentation = "https://docs.nocturne.io"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
pyyaml = "^6.0"
# Add other core dependencies as they are implemented
# Example: httpx, web3, etc.

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.1"
mypy = "^1.5"
hypothesis = "^6.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
